# Pikey

./: README.md  build.gradle  config.gradle  gradle.properties  local.properties  settings.gradle
app/src/androidTest/java/com/golthr/pikey/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gs_ptd.sf2
app/src/main/assets/Keymap/: NumHigh.kmp  default.kmp
app/src/main/assets/SoundFonts/: gs_ptd.properties
app/src/main/java/com/golthr/pikey/: BlackKey.java  Const.java  EntityKey.java  Key.java  KeyBoard.java  KeyMap.java  MainActivity.java  PianoKey.java  PianoKeyBoard.java  Utils.java  WhiteKey.java
app/src/main/res/drawable/: shape.xml  shape_on.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: attrs_key_board.xml  strings.xml
app/src/test/java/com/golthr/pikey/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  midisynthesizer.cpp
lib/src/main/java/com/midisynthesizer/: MidiSynthesizer.java
